--- a/src/main/resources/templates/findleave.html
+++ b/src/main/resources/templates/findleave.html
@@ -5,7 +5,7 @@
 <title>Find Employees on Leave - LAPS</title>
 </head>
 <h1>Search Form</h1>
-    <form th:action="@{/EmpOnLeave}" th:object="${leaves}" method="get">
+    <form th:action="@{/staff/EmpOnLeave}" th:object="${leaves}" method="get">
     	<p>Start Date: <input type="date" th:field="*{startDate}" /></p>
         <p>End Date	 : <input type="date" th:field="*{endDate}" /></p>
         <p><input type="submit" value="Find" /></p>
